# core-json

./: .rustfmt.toml  CHANGELOG.md  Cargo.toml  Code of Conduct.md  Contributing.md  LICENSE  README.md
.github/actions/build-dependencies/: action.yml
.github/workflows/: daily-deny.yml  lint.yml  no-std.yml  tests.yml
core/: CHANGELOG.md  Cargo.toml
core/src/: deserializer.rs  io.rs  lib.rs  number.rs  string.rs  sync.rs
core/src/stack/: const.rs  mod.rs
core/src/string/: hex.rs  mod.rs  unicode.rs
core/src/string2/: hex.rs  mod.rs
derive/: CHANGELOG.md  Cargo.toml  README.md
derive/src/: identifier.rs  lib.rs  simple_path.rs  struct.rs  vis.rs
derive/tests/: tests.rs
embedded-io/: CHANGELOG.md  Cargo.toml  README.md
embedded-io/src/: lib.rs
media/: LICENSE
tests/JSON-Schema-Test-Suite/: Cargo.toml  README.md
tests/JSON-Schema-Test-Suite/src/: lib.rs
tests/JSONTestSuite/: Cargo.toml  README.md
tests/JSONTestSuite/src/: lib.rs
tests/JSON_checker/: Cargo.toml  README.md
tests/JSON_checker/src/: lib.rs
tests/no-std/: Cargo.toml  README.md
tests/no-std/src/: lib.rs
tests/serde-json/: Cargo.toml
tests/serde_json/: Cargo.toml  README.md
tests/serde_json/benches/: ascii.rs  bool_array.rs  float_array.rs  int_array.rs  null_array.rs  unicode.rs  unicode_hex.rs
tests/serde_json/src/: lib.rs
traits/: CHANGELOG.md  Cargo.toml  README.md
traits/src/: boxed.rs  float.rs  lib.rs  maps.rs  option.rs  primitives.rs  sequences.rs  string.rs  tri.rs
