[package]
name = "core-json"
version = "0.1.3"
description = "A non-allocating JSON deserializer"
license = "MIT"
repository = "https://github.com/kayabaNerve/core-json/tree/main/core"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
edition = "2021"
rust-version = "1.65"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[features]
alloc = []
