[package]
name = "core-json"
version = "0.4.0"
description = "A non-allocating JSON deserializer"
license = "MIT"
repository = "https://github.com/core-json/core-json/tree/main/core"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = ["core", "no-std", "json"]
edition = "2024"
rust-version = "1.89"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[features]
alloc = []
std = ["alloc"]
