[package]
name = "core-json-derive"
version = "0.2.0"
description = "`derive` macros for `core-json-traits`"
license = "MIT"
repository = "https://github.com/core-json/core-json/tree/main/derive"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = ["core", "no-std", "json", "proc-macro", "derive"]
edition = "2021"
rust-version = "1.79"

[lib]
proc-macro = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dev-dependencies]
core-json-traits = { path = "../traits", version = "0.2" , features = ["alloc"] }
