[package]
name = "core-json-derive"
version = "0.4.1"
description = "`derive` macros for `core-json-traits`"
license = "MIT"
repository = "https://github.com/core-json/core-json/tree/main/derive"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = ["core", "no-std", "json", "proc-macro", "derive"]
edition = "2024"
rust-version = "1.85"

[lib]
proc-macro = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dev-dependencies]
core-json-traits = { path = "../traits", features = ["alloc"] }
