[package]
name = "core-json-traits"
version = "0.1.0"
description = "Traits for working with `JSON`-serialized objects"
license = "MIT"
repository = "https://github.com/kayabaNerve/core-json/tree/main/traits"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
edition = "2021"
rust-version = "1.65"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
core-json = { path = "../core", version = "0.1" }

[features]
alloc = []
