[package]
name = "core-json-traits"
version = "0.2.0"
description = "Traits for working with `JSON`-serialized objects"
license = "MIT"
repository = "https://github.com/core-json/core-json/tree/main/traits"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = ["core", "no-std", "json"]
edition = "2021"
rust-version = "1.85"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
core-json = { path = "../core", version = "0.2" }

[features]
alloc = []
