[package]
name = "core-json-traits"
version = "0.4.0"
description = "Traits for working with `JSON`-serialized objects"
license = "MIT"
repository = "https://github.com/core-json/core-json/tree/main/traits"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = ["core", "no-std", "json"]
edition = "2024"
rust-version = "1.89"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
core-json = { path = "../core", version = "0.4" }
ryu = { version = "1", default-features = false, optional = true }

[features]
alloc = []
