[package]
name = "core-json-JSONTestSuite-tests"
version = "0.1.0"
description = "A fuzz tester for `core-json` relying on `JSONTestSuite`'s vectors'"
license = "MIT"
repository = "https://github.com/core-json/core-json/tree/main/tests/JSONTestSuite"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = ["nostd", "no_std", "alloc"]
edition = "2021"
publish = false
rust-version = "1.89"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
core-json = { path = "../../core" }
serde_json = "1"
core-json-serde_json-tests = { path = "../serde_json" }
