[package]
name = "core-json-no-std-tests"
version = "0.1.0"
description = "A crate to test no-`std` builds of `core-json` crates work"
license = "MIT"
repository = "https://github.com/core-json/core-json/tree/main/tests/no-std"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = ["nostd", "no_std", "alloc"]
edition = "2021"
publish = false
rust-version = "1.89"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
core-json = { path = "../../core" }
core-json-traits = { path = "../../traits" }
core-json-derive = { path = "../../derive" }

core-json-embedded-io = { path = "../../embedded-io" }

[features]
alloc = ["core-json-traits/alloc"]
