[package]
name = "core-json-serde_json-tests"
version = "0.1.0"
description = "A fuzz tester for `core-json` relying on `serde-json`"
license = "MIT"
repository = "https://github.com/core-json/core-json/tree/main/tests/serde_json"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = ["nostd", "no_std", "alloc"]
edition = "2021"
publish = false
rust-version = "1.84"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
rand_core = { version = "0.6", features = ["getrandom"] }
core-json = { path = "../../core" }
core-json-traits = { path = "../../traits" }
serde_json = "1"

[features]
ryu = ["core-json-traits/ryu"]
