[package]
name = "core-json-serde_json-tests"
version = "0.1.0"
description = "A fuzz tester for `core-json` relying on `serde-json`"
license = "MIT"
repository = "https://github.com/core-json/core-json/tree/main/tests/serde_json"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = ["nostd", "no_std", "alloc"]
edition = "2024"
publish = false
rust-version = "1.89"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[[bench]]
name = "null_array"
harness = false

[[bench]]
name = "bool_array"
harness = false

[[bench]]
name = "int_array"
harness = false

[[bench]]
name = "float_array"
harness = false

[[bench]]
name = "ascii"
harness = false

[[bench]]
name = "unicode_hex"
harness = false

[[bench]]
name = "unicode"
harness = false

[dependencies]
rand_core = { version = "0.6", features = ["getrandom"] }
core-json = { path = "../../core" }
core-json-traits = { path = "../../traits", features = ["alloc"] }
serde_json = "1"

[features]
ryu = ["core-json-traits/ryu"]
